# c_utils

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build_lib.sh  cmake_install.cmake  makefile
examples/: CMakeLists.txt  mod.c  numbers.c
include/: mod.h  modular.h  numbers.h  strings.h
sources/: mod.c  modular.c  numbers.c  strings.c
